News UAT/force-app/main/default/objects/NLM_Global_Settings__c/NLM_Global_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings used to switch NLM functionality on / off based on profile.</description>
    <label>NLM Global Settings</label>
</CustomObject>