News UAT/force-app/main/default/objects/NLM_Global_Settings__c/fields/Fire_NewsCorp_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Fire_NewsCorp_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows an NLM user to fire News Corp specific triggers</description>
    <label>Fire NewsCorp Triggers</label>
    <type>Checkbox</type>
</CustomField>