News UAT/force-app/main/default/objects/NLM_Global_Settings__c/fields/Fire_NewsCorp_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Fire_NewsCorp_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows NLM users to fire NewsCorp specific validation rules</description>
    <label>Fire NewsCorp Validation Rules</label>
    <type>Checkbox</type>
</CustomField>