News UAT/force-app/main/default/objects/NLM_Global_Settings__c/fields/Fire_NewsCorp_Workflows__c.field-meta.xml
<CustomField>
    <fullName>Fire_NewsCorp_Workflows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows an NLM user to fire NewsCorps specific workflows</description>
    <label>Fire NewsCorp Workflows</label>
    <type>Checkbox</type>
</CustomField>