News UAT/force-app/main/default/objects/NLM_Global_Settings__c/fields/Fire_NLM_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Fire_NLM_Approval_Process__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows a user to fire NLM specific approval processes</description>
    <label>Fire NLM Approval Process</label>
    <type>Checkbox</type>
</CustomField>