News UAT/force-app/main/default/objects/NLM_Global_Settings__c/fields/Fire_NLM_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Fire_NLM_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows a user to fire NLM specific triggers</description>
    <label>Fire NLM Triggers</label>
    <type>Checkbox</type>
</CustomField>