News UAT/force-app/main/default/objects/NLM_Global_Settings__c/fields/Fire_NLM_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Fire_NLM_Validation_Rules__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows a user to fire NLM specific validation rules</description>
    <label>Fire NLM Validation Rules</label>
    <type>Checkbox</type>
</CustomField>