News UAT/force-app/main/default/objects/NLM_Global_Settings__c/fields/Fire_NLM_Workflows__c.field-meta.xml
<CustomField>
    <fullName>Fire_NLM_Workflows__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows a user to fire NLM specific workflows</description>
    <label>Fire NLM Workflows</label>
    <type>Checkbox</type>
</CustomField>